nginx-config/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:221133053333:certificate/ad1e683b-9ce4-4313-8615-ecb1de2e6d2c
    alb.ingress.kubernetes.io/tags: "Environment=sandbox , Project=vf-grp-ias-dev-ias-sanbox , ManagedBy=o-380-dl-vci-secretsmanagement@vodafone.onmicrosoft.com , SecurityZone=DEV , Confidentiality=C2 , TaggingVersion=V2.4"
    alb.ingress.kubernetes.io/group.name: test-apps-alb
spec:
  tls:
  - hosts:
    - nginx.devvf.com    
  ingressClassName: alb
  rules:
  - host: nginx.devvf.com
    http:
      paths:
      - backend:
          service:
            # must be a nodeport service
            name: nginx-svc
            port:
              number: 80
        path: /
        pathType: Prefix
